@@ -112,6 +112,7 @@ def types_and_shorthands():
         'regex': 'r',
         'SplitAlign': 'n',
         'LayoutAlgorithm': 'n',
+        'TextAlign': 'n',
         'font': 'f',
         'Rectangle': 'R',
         'WindowID': 'w',
