@@ -10,6 +10,7 @@ Current git version
   * Tabbed window titles in the 'max' layout algorithm (controllable via the
     'tabbed_max' setting)
   * New autostart object with attributes 'path', 'running', 'pid', 'last_status'
+  * New decoration attribute 'title_align'
   * New client attribute 'floating_effectively' and associated X11 properties
     'HLWM_FLOATING_WINDOW' and 'HLWM_TILING_WINDOW'
   * New 'foreach' command line flags: '--filter-name=', '--recursive', '--unique'
